moved overflow to RichText from CellItem to fix image issue

--- a/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/Bundles/Forerunner-all.css
+++ b/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/Bundles/Forerunner-all.css
@@ -1065,12 +1065,12 @@ ul.fr-nav-container { display: block; white-space: nowrap; vertical-align: top; 
 .fr-render-error-license-link a { text-decoration: none; color: white; font-size: 1.2em; }
 
 .fr-render-rec {display:table;border-collapse:collapse;}
-.fr-r-rT{display:table;table-layout: fixed;position:relative;}
+.fr-r-rT{display:table;table-layout: fixed;position:relative;overflow:hidden;}
 .fr-r-t{white-space:pre-wrap;margin:0;display: table-cell; }
 .fr-r-pL{width:100%;height:100%;}
 .fr-render-image{display:block;max-height:100%;max-width:100%;overflow:hidden;}
 .fr-r-tC{vertical-align:top;padding:0;margin:0;}
-.fr-r-tCI{margin:0;width:100%;height:100%;overflow:hidden;}
+.fr-r-tCI{margin:0;width:100%;height:100%;}
 .fr-render-tablix{border-collapse:collapse;padding:0;margin:0;table-layout:fixed;}
 .fr-r-fS{width:100%;height:100%;}
 .fr-lazyNext{color:blue;font-size:large;}
